# OpenCVTemplate

./: .gitignore  CMakeLists.txt
Include/: Config.h.in  SimpleClass.h
Scripts/: build.sh  configure.sh  run.sh  runTests.sh
Src/: Main.cpp  SimpleClass.cpp
Tests/: CMakeLists.txt  TestSimpleClass.cpp
